--- a/e-mail.html
+++ b/e-mail.html
@@ -9,21 +9,24 @@
 <body>
         <div class="envelope">
             <div class="mail">
-                <div class=" container">
+                <div class="faixa">
+                    <p>Follow the Google Party - Monday from Friday</p>
+                </div>
+                <div class="container">
                     <div class="card">
                         <div class="content">
-                        <h2> When</h2>
-                        <ul>
-                            <li> 02/30/2052</li>
-                            <li> another Li</li>
-                            <li> Just to be good</li>
-                        </ul>
+                            <h2> When</h2>
+                            <ul>
+                                <li> 02/30/2052</li>
+                                <li> another Li</li>
+                                <li> Just to be good</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="card">
                         <div class="content">
-                        <h2> Where</h2>
-                        <p> At my house, if you don't know, it's better you turning my friend quickly, you just have 31 years for it </p>
+                            <h2> Where</h2>
+                            <p> At my house, if you don't know, it's better you turning my friend quickly, you just have 31 years for it </p>
                         </div>
                     </div>
                 </div>
